--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </table>
       <hr color="green" size="1px" noshade>
       <h3 style="color:green"><strong><u>MY SKILLS</u></strong></h3>
-      <table border="1px" style="border-collapse:collapse">
+      <table border="1px" style="border-collapse:collapse; cellspacing:20px">
       <thead>
         <th>PROGRAMMING SKILLS</th>
         <th>TECHNICAL SKILLS</th>
