--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <hr size="1px" color="green" noshade>
       <h3 style="color:green"><b><u>ACADEMIC DETAILS</u></b></h3>
-      <table>
+      <table cellspacing="30px">
         <tr>
           <td>B.TECH</td>
           <td><a href="http://mnnit.ac.in/">MNNIT ALLAHABAD</a></td>
@@ -40,7 +40,7 @@
       </table>
       <hr color="green" size="1px" noshade>
       <h3 style="color:green"><strong><u>MY SKILLS</u></strong></h3>
-      <table border="1px" style="border-collapse:collapse; cellspacing:20px">
+      <table border="1px" cellspacing="30px" style="border-collapse:collapse">
       <thead>
         <th>PROGRAMMING SKILLS</th>
         <th>TECHNICAL SKILLS</th>
