--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
       <meta charset="utf-8">
       <title>RESUME</title>
     </head>
-    <body style="background-color:#99FFCC;font-family:arial">
-      <table cellspacing="20">
+    <body style="text-align:center">
+     <div width="70%">
+      <table cellspacing="20" width="100%">
         <tr>
           <td><img src="images/image.png" alt="PROFILE PICTURE" width="200" height="200" style="border-radius:50%" ></td>
           <td><h1>RAHUL GAHALAUT</h1>
@@ -13,7 +14,7 @@
           <p>UNDER GRADUATE STUDENT AT <strong><a href="http://mnnit.ac.in/">MNNIT ALLAHABAD</a></strong></p></td>
         </tr>
       </table>
-
+      </div>
 
       <hr size="1px" color="green" noshade>
       <h3 style="color:green"><b><u>ACADEMIC DETAILS</u></b></h3>
@@ -40,7 +41,7 @@
       </table>
       <hr color="green" size="1px" noshade>
       <h3 style="color:green"><strong><u>MY SKILLS</u></strong></h3>
-      <table border="1px" cellspacing="30px" style="border-collapse:collapse">
+      <table border="1px" cellspacing="30px" style="border-collapse:collapse;width:100%">
       <thead>
         <th>PROGRAMMING SKILLS</th>
         <th>TECHNICAL SKILLS</th>
