--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body style="text-align:center">
      <div width="70%">
-      <table cellspacing="20" width="100%">
+      <table cellspacing="20" style="width:100%">
         <tr>
           <td><img src="images/image.png" alt="PROFILE PICTURE" width="200" height="200" style="border-radius:50%" ></td>
           <td><h1>RAHUL GAHALAUT</h1>
